# credit-score-data-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
orchestration/airflow/: README.md
orchestration/airflow/dags/: credit_score_pipeline.py
orchestration/airflow/tasks/: credit_score_tasks.py
scripts/: start_airflow.sh
src/config/: settings.py
src/ingestion/: downloader.py  kaggle_auth.py  kaggle_client.py  metadata.py
src/observability/: logger.py
src/pipeline/: credit_score_pipeline.py
src/processing/bronze/: bronze_loader.py
src/processing/gold/: dimensions.py  facts.py  gold_loader.py  validator.py
src/processing/silver/: cleaning.py  schema.py  silver_loader.py  typing.py  validator.py
src/storage/: gcs_uploader.py
src/utils/: dataset_inspector.py
tests/integration/: test_medallion_pipeline.py
tests/unit/: test_gold_dimensions.py
tests/unit/bronze/: test_bronze_loader.py
tests/unit/gold/: test_gold_facts.py  test_gold_loader.py  test_gold_validator.py
tests/unit/orchestration/airflow/tasks/: test_credit_score_tasks.py
tests/unit/pipeline/: test_credit_score_pipeline.py
tests/unit/silver/: test_silver_cleaning.py  test_silver_typing.py  test_silver_validator.py
tests/unit/storage/: test_gcs_uploader.py
