[project]
name = "credit-score-data-platform"
version = "0.1.0"
description = "End-to-end data engineering platform for credit risk analytics."
requires-python = ">=3.14"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]